--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,12 @@
 server {
     listen       443 ssl;
-    server_name  hk002.lensfa.computer;                  #修改为自己的域名
-    ssl_certificate /ssl/hk002.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
-    ssl_certificate_key /ssl/hk002.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
+    server_name  aws.lensfa.computer;                  #修改为自己的域名
+    ssl_certificate /ssl/aws.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
+    ssl_certificate_key /ssl/aws.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
  
     location /liangzhuding {                         #修改为你自己的路径，需要和 V2RAY 里面的路径一样
         proxy_redirect off;
-        proxy_pass http://127.0.0.1:38174;       #修改为你自己的 v2ray 服务器端口，就是这里需要和上面 V2RAY 配置文件里面的端口号相同。
+        proxy_pass http://127.0.0.1:35854;       #修改为你自己的 v2ray 服务器端口，就是这里需要和上面 V2RAY 配置文件里面的端口号相同。
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
