--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,8 @@
 server {
     listen       443 ssl;
-    server_name  board.lensfa.computer;                  #修改为自己的域名
-    ssl_certificate /ssl/board.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
-    ssl_certificate_key /ssl/board.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
+    server_name  mg.lensfa.computer;                  #修改为自己的域名
+    ssl_certificate /ssl/mg.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
+    ssl_certificate_key /ssl/mg.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
  
     location /liangzhuding {                         #修改为你自己的路径，需要和 V2RAY 里面的路径一样
         proxy_redirect off;
