--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,6 @@
 server {
     listen       443 ssl;
-    server_name  board.lensfa.computer;                     #修改为自己的域名
-    
-    index index.html index.htm ;
-    root /ssl;
-    
+    server_name  board.lensfa.computer;                     #修改为自己的域
     ssl_certificate /ssl/board.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
     ssl_certificate_key /ssl/board.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
  
@@ -24,3 +20,10 @@ server {
 }
 
 
+server
+{
+    listen 80;
+    server_name 18.163.206.143;
+    index index.html;
+    root /www/wwwroot/18.163.206.143;
+    }
