--- a/default.conf
+++ b/default.conf
@@ -2,7 +2,9 @@ server {
     listen       443 ssl;
     server_name  board.lensfa.computer;                     #修改为自己的域
     ssl_certificate /ssl/board.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
-    ssl_certificate_key /ssl/board.lensfa.computer.key;   #将 bozaibozai.ml 修改为自己的域名
+    ssl_certificate_key /ssl/board.lensfa.computer.key      #将 bozaibozai.ml 修改为自己的域名
+    index index.html;
+    root /www/wwwroot/board.lensfa.computer;
  
     location /liangzhuding {                         #修改为你自己的路径，需要和 V2RAY 里面的路径一样
         proxy_redirect off;
