--- a/default.conf
+++ b/default.conf
@@ -1,14 +1,14 @@
 server {
     listen       443 ssl;
-    server_name  board.lensfa.computer;                     #修改为自己的域
-    ssl_certificate /ssl/board.lensfa.computer.pem;       #将 bozaibozai.ml 修改为自己的域名
-    ssl_certificate_key /ssl/board.lensfa.computer.key      #将 bozaibozai.ml 修改为自己的域名
+    server_name  *.lensfa.xyz;                  
+    ssl_certificate /ssl/lensfa.xyz.pem;       
+    ssl_certificate_key /ssl/lensfa.xyz.key;
     index index.html;
-    root /www/wwwroot/board.lensfa.computer;
+    root /www/wwwroot/lensfa.xyz;   
  
-    location /liangzhuding {                         #修改为你自己的路径，需要和 V2RAY 里面的路径一样
+    location /liangzhuding {                         
         proxy_redirect off;
-        proxy_pass http://127.0.0.1:33474;       #修改为你自己的 v2ray 服务器端口，就是这里需要和上面 V2RAY 配置文件里面的端口号相同。
+        proxy_pass http://127.0.0.1:1230;       
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -21,11 +21,25 @@ server {
     }
 }
 
-
-server
-{
-    listen 80;
-    server_name 18.163.206.143;
+server {
+    listen       443 ssl;
+    server_name  *.mg.lensfa.computer;                  
+    ssl_certificate /ssl/mg.lensfa.computer.pem;       
+    ssl_certificate_key /ssl/mg.lensfa.computer.key;
     index index.html;
-    root /www/wwwroot/18.163.206.143;
+    root /www/wwwroot/mg.lensfa.computer;      
+ 
+    location /liangzhuding {                        
+        proxy_redirect off;
+        proxy_pass http://127.0.0.1:1230;       
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout 60s;
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 60s;
     }
+}
